[STD-135] Implementing new files architecture - Importers with new persistence interface - Metadata for imported files - New file browser architecture - Multi select for files - Fixing components still using class simple name instead of enum - Changing streaming structure - Removing resource refs from components - New File metadata structure for selection and inspection